Refactor PodOperator to use boolean for background deletion and revert system test
Signed-off-by: guancioul <guancioul@gmail.com>